refactor: replace Math.clamp, List.removeFirst, Stream.toList with Java 11 equivalents
- Math.clamp(val, min, max) → Math.max(min, Math.min(max, val))
- List.removeFirst() → List.remove(0)
- Stream.toList() → Stream.collect(Collectors.toList())
- Added import java.util.stream.Collectors where needed

Files modified:
- PriorityRule.java, PriorityTask.java (Math.clamp)
- EventPanel.java, FileHistoryPanel.java, SnifferDebugDialog.java, LogPanel.java, SpeedChartPanel.java (removeFirst)
- RecyclerService.java, FileSelector.java, DeviceInfoDialog.java, SnifferDebugDialog.java, StatisticsPanel.java (Stream.toList + Collectors import)

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>